--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
     <body>
         {{>header}}
         <h1>let me tell you about our page</h1>
+        <p>This page uses mapbox.com and weatherstack.com api to show the forecast data of a certain location</p>
         <p>{{about}}</p>
         {{>footer}}
     </body>
