=current location weather

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,6 +12,7 @@
             <input placeholder = "enter a location">
             <button>Search</button>
         </form>
+        <button id="location-button">Current Location</button>
         <p id = "message1"></p>
         <p id = "message2"></p>
         {{>footer}}
